--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -707,7 +707,7 @@ header p {
 .wrapper.style3 {
     background-color: #000;
     color: #bfbfbf;
-    background-image: url(http://asker1.github.io/images/bg.jpg);
+    background-image: url(https://yafacharity.org.uk/images/bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
