--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1053,6 +1053,34 @@ header p {
         width: calc(100% + 1rem);
     }
 }
+
+@media (max-width: 549px) {
+    .big-container {
+        display: none;
+    }
+ }
+ @media (min-width: 550px) {
+    .small-container {
+        display: none;
+    }
+ }
+ .responsive-iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+ }
+ .responsive-iframe-container iframe,   
+ .vresponsive-iframe-container object,  
+ .vresponsive-iframe-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ }
+
 .navigation {
 height: 70px;
 background: #ffffff00;
