--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,6 +255,7 @@
  .box {
      margin-bottom: 2rem;
      background: #fff;
+     padding: 3rem;
 }
  .box .image.fit {
      margin: 0;
@@ -285,114 +286,251 @@
      height: 1px;
      background-color: rgba(0, 0, 0, 0.125);
 }
- .box .content {
-     padding: 3rem;
+
+.box .content {
+display: flex;
 }
- .box > :last-child, .box > :last-child > :last-child, .box > :last-child > :last-child > :last-child {
-     margin-bottom: 0;
+.box > :last-child, .box > :last-child > :last-child, .box > :last-child > :last-child > :last-child {
+  margin-bottom: 0;
 }
- .box.alt {
-     border: 0;
-     border-radius: 0;
-     padding: 0;
+.box.alt {
+  border: 0;
+  border-radius: 0;
+  padding: 0;
 }
- @media screen and (max-width: 736px) {
+
+@media screen and (max-width: 736px) {
      .box .content {
          padding: 2rem;
     }
 }
- .box {
+
+.box {
      border-color: rgba(144, 144, 144, 0.25);
+     display: flex;
 }
- .button, button {
-     -moz-appearance: none;
-     -webkit-appearance: none;
-     -ms-appearance: none;
-     appearance: none;
-     -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-     -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-     -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-     border-radius: 2px;
-     border: 0;
-     cursor: pointer;
-     display: inline-block;
-     font-weight: 300;
-     height: 2.85rem;
-     line-height: 2.95rem;
-     padding: 0 1.5rem;
-     text-align: center;
-     text-decoration: none;
-     text-transform: uppercase;
-     white-space: nowrap;
+
+.inline-block-child {
+  display: inline-block;
 }
- .button.icon, button.icon {
-     padding-left: 1.35rem;
+
+.left{
+  margin-right: 5rem;
 }
- .button.icon:before, button.icon:before {
-     margin-right: 0.5rem;
+
+.image-feature-image{
+  width: 30rem;
 }
- .button.fit, button.fit {
-     display: block;
-     margin: 0 0 1rem 0;
-     width: 100%;
+
+.donate-form_heading{
+  margin-right: 25rem;
 }
- .button:disabled, button:disabled {
-     -moz-pointer-events: none;
-     -webkit-pointer-events: none;
-     -ms-pointer-events: none;
-     pointer-events: none;
-     opacity: 0.25;
+
+.donate-form-tabs-options{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  margin-bottom: 16px;
 }
- @media screen and (max-width: 480px) {
-     .button, button {
-         padding: 0;
-         width: 100%;
+
+@media only screen and (min-width: 768px)
+.donate-form__fields{
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+.donate-form__fields{
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 16px;
+}
+
+.donation-amount__radio{
+  position: absolute;
+  z-index: -1;
+}
+
+type="checkbox"], [type="radio"] {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+}
+
+.donation-amount--col {
+    grid-column: span 2;
+}
+
+
+.donation-amount-other {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+}
+
+
+input[type="radio" i] {
+    background-color: initial;
+    cursor: default;
+    appearance: auto;
+    box-sizing: border-box;
+    margin: 3px 3px 0px 5px;
+    padding: initial;
+    border: initial;
+}
+
+input[type="number" i] {
+    padding: 1px 2px;
+}
+
+
+.donation-amount-other .donation-amount__label {
+  -ms-flex-preferred-size: 55px;
+  flex-basis: 55px;
+  min-width: 55px;
+  max-width: 55px;
+}
+
+.donation-amount__label {
+  position: relative;
+  z-index: 1;
+  display: block;
+  border: 1px solid #ccc;
+  padding: 20px 5px;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: color 0.25s ease-out 0s,border-color 0.25s ease-out 0s,background-color 0.25s ease-out 0s;
+  transition: color 0.25s ease-out 0s,border-color 0.25s ease-out 0s,background-color 0.25s ease-out 0s;
+}
+
+.donation-amount__label--hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+}
+
+label {
+    cursor: default;
+}
+
+.donation-amount-other .donation-amount__input:not([type="checkbox"]):not([type="radio"]) {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    padding-left: 12px;
+    border: 1px solid #ccc;
+    border-left: 0;
+}
+
+button, input:not([type="checkbox"]):not([type="radio"]), select, textarea {
+    font-family: inherit;
+    border-radius: 0;
+}
+
+button, input {
+    overflow: visible;
+}
+button, input, optgroup, select, textarea {
+    font: inherit;
+    margin: 0;
+}
+
+input[type="number" i] {
+    padding: 1px 2px;
+}
+
+
+
+
+.button.icon, button.icon {
+  padding-left: 1.35rem;
+}
+
+
+.button.icon:before, button.icon:before {
+  margin-right: 0.5rem;
+}
+.button.fit, button.fit {
+  display: block;
+  margin: 0 0 1rem 0;
+  width: 100%;
+}
+.button:disabled, button:disabled {
+  -moz-pointer-events: none;
+  -webkit-pointer-events: none;
+  -ms-pointer-events: none;
+  pointer-events: none;
+  opacity: 0.25;
+}
+@media screen and (max-width: 480px) {
+  .button, button {
+    padding: 0;
+    width: 100%;
     }
 }
- .button, button {
-     background-color: #f2f2f2;
-     color: #000 !important;
+
+.button, button {
+  background-color: #f2f2f2;
+  color: #000 !important;
 }
- .button:hover, button:hover {
-     background-color: #fff;
+
+.button:hover, button:hover {
+  background-color: #fff;
 }
- .button:active, button:active {
-     background-color: #e5e5e5;
+
+.button:active, button:active {
+  background-color: #e5e5e5;
 }
- .button.alt, button.alt {
-     background-color: transparent;
-     box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
-     color: #555 !important;
+
+.button.alt, button.alt {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
+  color: #555 !important;
 }
- .button.alt:hover, button.alt:hover {
-     background-color: rgba(144, 144, 144, 0.075);
+
+.button.alt:hover, button.alt:hover {
+  background-color: rgba(144, 144, 144, 0.075);
 }
- .button.alt:active, button.alt:active {
-     background-color: rgba(144, 144, 144, 0.2);
+
+.button.alt:active, button.alt:active {
+  background-color: rgba(144, 144, 144, 0.2);
 }
- .button.alt.icon:before, button.alt.icon:before {
-     color: #bbb;
+
+.button.alt.icon:before, button.alt.icon:before {
+  color: #bbb;
 }
- .button.special, button.special {
-     background-color: #ffa833;
-     color: #fff !important;
-     font-weight: 700;
-     margin-top: 14px;
-     margin-bottom: 10px;
-     margin-right: 5px;
+
+.button.special, button.special {
+  background-color: #ffa833;
+  color: #fff !important;
+  font-weight: 700;
+  margin-top: 14px;
+  margin-bottom: 10px;
+  margin-right: 5px;
 }
- .button.special:hover, button.special:hover {
-     background-color: #ffbf6b;
+
+.button.special:hover, button.special:hover {
+  background-color: #ffbf6b;
 }
- .button.special:active, button.special:active {
-     background-color: #c49251;
+
+.button.special:active, button.special:active {
+  background-color: #c49251;
 }
- label {
-     display: block;
-     font-size: 0.9rem;
-     font-weight: 700;
-     margin: 0 0 1rem 0;
+
+label {
+  display: block;
+  font-size: 0.9rem;
+  font-weight: 700;
+  margin: 0 0 0 0;
 }
  ::-webkit-input-placeholder {
      opacity: 1;
