--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,92 +299,32 @@ display: flex;
   padding: 0;
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 736px) {
      .box .content {
-         display: -webkit-box;
-         display: -ms-flexbox;
-         display: flex;
-         -webkit-box-orient: vertical;
-         -webkit-box-direction: normal;
-         -ms-flex-direction: column;
-         flex-direction: column;
-         margin: auto;
+         padding: 2rem;
     }
 }
 
-@media screen and (max-width: 800px){
-  .box .content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
-
 .box {
      border-color: rgba(144, 144, 144, 0.25);
-     display: grid;
-     grid-gap: 5rem;
+     display: flex;
 }
-
-
 
 .inline-block-child {
   display: inline-block;
 }
 
-@media screen and (max-width: 1090px)
-{
-  .left{
-    margin: auto;
-  }
+.left{
+  margin-right: 5rem;
 }
 
-@media screen and (max-width: 720px){
-
-}
 .image-feature-image{
-  width: 60vh;
-}
-
-
-.donate-form{
-  width: 100vh;
-  margin-left: 2rem;
-}
-
-@media screen and (max-width: 1365px){
-  .donate-form{
-    width: 125vh;
-    margin-left: 2.5rem;
-  }
-}
-
-@media screen and (max-width: 800px){
-  .donate-form{
-    margin: 0;
-  }
-}
-
-.donate-form-currency{
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
-
-.donate-form_header{
-  display: flex;
-  position: relative;
+  width: 30rem;
 }
 
 .donate-form_heading{
-  font-size: 150%;
+  margin-right: 25rem;
 }
-
 
 .donate-form-tabs-options{
   display: -webkit-box;
@@ -395,11 +335,6 @@ display: flex;
   -ms-flex-direction: row;
   flex-direction: row;
   margin-bottom: 16px;
-}
-
-.tabs-label{
-  font-size: 2.5vh;
-  padding-right: 1rem;
 }
 
 @media only screen and (min-width: 768px)
@@ -513,28 +448,6 @@ input[type="number" i] {
     padding: 1px 2px;
 }
 
-.button, button {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    border-radius: 2px;
-    border: 0;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 300;
-    height: 2.85rem;
-    line-height: 2.95rem;
-    padding: 0 1.5rem;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    white-space: nowrap;
-}
 
 
 
@@ -646,7 +559,6 @@ label {
  :-ms-input-placeholder {
      color: #bbb !important;
 }
-
  .icon {
      text-decoration: none;
      border-bottom: none;
