--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,7 +255,6 @@
  .box {
      margin-bottom: 2rem;
      background: #fff;
-     padding: 3rem;
 }
  .box .image.fit {
      margin: 0;
@@ -286,331 +285,114 @@
      height: 1px;
      background-color: rgba(0, 0, 0, 0.125);
 }
-
-.box .content {
-display: flex;
+ .box .content {
+     padding: 3rem;
 }
-.box > :last-child, .box > :last-child > :last-child, .box > :last-child > :last-child > :last-child {
-  margin-bottom: 0;
+ .box > :last-child, .box > :last-child > :last-child, .box > :last-child > :last-child > :last-child {
+     margin-bottom: 0;
 }
-.box.alt {
-  border: 0;
-  border-radius: 0;
-  padding: 0;
+ .box.alt {
+     border: 0;
+     border-radius: 0;
+     padding: 0;
 }
-
-@media screen and (max-width: 800px){
-  .box .content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 1080px) {
+ @media screen and (max-width: 736px) {
      .box .content {
          padding: 2rem;
-         display: -webkit-box;
-         display: -ms-flexbox;
-         display: flex;
-         -webkit-box-orient: vertical;
-         -webkit-box-direction: normal;
-         -ms-flex-direction: column;
-         flex-direction: column;
-         margin: auto;
     }
 }
-
-.box {
+ .box {
      border-color: rgba(144, 144, 144, 0.25);
-     display: grid;
-     grid-gap: 5rem;
 }
-
-.inline-block-child {
-  display: inline-block;
+ .button, button {
+     -moz-appearance: none;
+     -webkit-appearance: none;
+     -ms-appearance: none;
+     appearance: none;
+     -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+     -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+     -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+     border-radius: 2px;
+     border: 0;
+     cursor: pointer;
+     display: inline-block;
+     font-weight: 300;
+     height: 2.85rem;
+     line-height: 2.95rem;
+     padding: 0 1.5rem;
+     text-align: center;
+     text-decoration: none;
+     text-transform: uppercase;
+     white-space: nowrap;
 }
-
-@media screen and (max-width: 1090px)
-{
-  .left{
-    margin: auto;
-  }
+ .button.icon, button.icon {
+     padding-left: 1.35rem;
 }
-
-
-.image-feature-image{
-  width: 60vh;
+ .button.icon:before, button.icon:before {
+     margin-right: 0.5rem;
 }
-
-.donate-form{
-  width: 100vh;
-  margin-left: 2rem;
+ .button.fit, button.fit {
+     display: block;
+     margin: 0 0 1rem 0;
+     width: 100%;
 }
-
-@media screen and (max-width: 1365px){
-  .donate-form{
-    width: 125vh;
-    margin-left: 2.5rem;
-  }
+ .button:disabled, button:disabled {
+     -moz-pointer-events: none;
+     -webkit-pointer-events: none;
+     -ms-pointer-events: none;
+     pointer-events: none;
+     opacity: 0.25;
 }
-
-@media screen and (max-width: 800px){
-  .donate-form{
-    margin: 0;
-  }
-}
-
-.donate-form-currency{
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
-
-.donate-form_header{
-  display: flex;
-  position: relative;
-}
-
-.donate-form_heading{
-  font-size: 150%;
-}
-
-.donate-form-tabs-options{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  margin-bottom: 16px;
-}
-
-.tabs-label{
-  font-size: 2.5vh;
-  padding-right: 1rem;
-}
-
-@media only screen and (min-width: 768px)
-.donate-form__fields{
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
-}
-
-.donate-form__fields{
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: 1fr 1fr;
-  margin-bottom: 16px;
-}
-
-.donation-amount__radio{
-  position: absolute;
-  z-index: -1;
-}
-
-type="checkbox"], [type="radio"] {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0;
-}
-
-.donation-amount--col {
-    grid-column: span 2;
-}
-
-
-.donation-amount-other {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    flex-direction: row;
-}
-
-
-input[type="radio" i] {
-    background-color: initial;
-    cursor: default;
-    appearance: auto;
-    box-sizing: border-box;
-    margin: 3px 3px 0px 5px;
-    padding: initial;
-    border: initial;
-}
-
-input[type="number" i] {
-    padding: 1px 2px;
-}
-
-
-.donation-amount-other .donation-amount__label {
-  -ms-flex-preferred-size: 55px;
-  flex-basis: 55px;
-  min-width: 55px;
-  max-width: 55px;
-}
-
-.donation-amount__label {
-  position: relative;
-  z-index: 1;
-  display: block;
-  border: 1px solid #ccc;
-  padding: 20px 5px;
-  text-align: center;
-  cursor: pointer;
-  -webkit-transition: color 0.25s ease-out 0s,border-color 0.25s ease-out 0s,background-color 0.25s ease-out 0s;
-  transition: color 0.25s ease-out 0s,border-color 0.25s ease-out 0s,background-color 0.25s ease-out 0s;
-}
-
-.donation-amount__label--hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    clip: rect(1px, 1px, 1px, 1px);
-}
-
-label {
-    cursor: default;
-}
-
-.donation-amount-other .donation-amount__input:not([type="checkbox"]):not([type="radio"]) {
-    -webkit-box-flex: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
-    padding-left: 12px;
-    border: 1px solid #ccc;
-    border-left: 0;
-}
-
-button, input:not([type="checkbox"]):not([type="radio"]), select, textarea {
-    font-family: inherit;
-    border-radius: 0;
-}
-
-button, input {
-    overflow: visible;
-}
-button, input, optgroup, select, textarea {
-    font: inherit;
-    margin: 0;
-}
-
-input[type="number" i] {
-    padding: 1px 2px;
-}
-
-.button, button {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    border-radius: 2px;
-    border: 0;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 300;
-    height: 2.85rem;
-    line-height: 2.95rem;
-    padding: 0 1.5rem;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    white-space: nowrap;
-}
-
-
-.button.icon, button.icon {
-  padding-left: 1.35rem;
-}
-
-
-.button.icon:before, button.icon:before {
-  margin-right: 0.5rem;
-}
-.button.fit, button.fit {
-  display: block;
-  margin: 0 0 1rem 0;
-  width: 100%;
-}
-.button:disabled, button:disabled {
-  -moz-pointer-events: none;
-  -webkit-pointer-events: none;
-  -ms-pointer-events: none;
-  pointer-events: none;
-  opacity: 0.25;
-}
-@media screen and (max-width: 480px) {
-  .button, button {
-    padding: 0;
-    width: 100%;
+ @media screen and (max-width: 480px) {
+     .button, button {
+         padding: 0;
+         width: 100%;
     }
 }
-
-.button, button {
-  background-color: #f2f2f2;
-  color: #000 !important;
+ .button, button {
+     background-color: #f2f2f2;
+     color: #000 !important;
 }
-
-.button:hover, button:hover {
-  background-color: #fff;
+ .button:hover, button:hover {
+     background-color: #fff;
 }
-
-.button:active, button:active {
-  background-color: #e5e5e5;
+ .button:active, button:active {
+     background-color: #e5e5e5;
 }
-
-.button.alt, button.alt {
-  background-color: transparent;
-  box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
-  color: #555 !important;
+ .button.alt, button.alt {
+     background-color: transparent;
+     box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
+     color: #555 !important;
 }
-
-.button.alt:hover, button.alt:hover {
-  background-color: rgba(144, 144, 144, 0.075);
+ .button.alt:hover, button.alt:hover {
+     background-color: rgba(144, 144, 144, 0.075);
 }
-
-.button.alt:active, button.alt:active {
-  background-color: rgba(144, 144, 144, 0.2);
+ .button.alt:active, button.alt:active {
+     background-color: rgba(144, 144, 144, 0.2);
 }
-
-.button.alt.icon:before, button.alt.icon:before {
-  color: #bbb;
+ .button.alt.icon:before, button.alt.icon:before {
+     color: #bbb;
 }
-
-.button.special, button.special {
-  background-color: #ffa833;
-  color: #fff !important;
-  font-weight: 700;
-  margin-top: 14px;
-  margin-bottom: 10px;
-  margin-right: 5px;
+ .button.special, button.special {
+     background-color: #ffa833;
+     color: #fff !important;
+     font-weight: 700;
+     margin-top: 14px;
+     margin-bottom: 10px;
+     margin-right: 5px;
 }
-
-.button.special:hover, button.special:hover {
-  background-color: #ffbf6b;
+ .button.special:hover, button.special:hover {
+     background-color: #ffbf6b;
 }
-
-.button.special:active, button.special:active {
-  background-color: #c49251;
+ .button.special:active, button.special:active {
+     background-color: #c49251;
 }
-
-label {
-  display: block;
-  font-size: 0.9rem;
-  font-weight: 700;
-  margin: 0 0 0 0;
+ label {
+     display: block;
+     font-size: 0.9rem;
+     font-weight: 700;
+     margin: 0 0 1rem 0;
 }
  ::-webkit-input-placeholder {
      opacity: 1;
@@ -1226,137 +1008,165 @@ label {
      width: 100%;
      height: 100%;
 }
- .navigation {
-     height: 70px;
-     background: #ffffff00;
-}
- .brand {
-     position: absolute;
-     padding-left: 20px;
-     float: left;
-     line-height: 70px;
-     text-transform: uppercase;
-     font-size: 1.4em;
-}
- .brand a, .brand a:visited {
-     color: #000;
-     text-decoration: none;
-}
- .brand img {
-     height: 60px;
-     width: 60px;
-}
- .nav-container {
-     max-width: 1000px;
-     margin: 0 auto;
-}
- nav {
-     float: right;
-}
- nav ul {
-     list-style: none;
-     margin: 0;
-     padding: 0;
-}
- nav ul li {
-     float: left;
-     position: relative;
-}
- nav ul li a, nav ul li a:visited {
-     display: block;
-     padding: 0 10px;
-     line-height: 70px;
-     background: #ffffff00;
-     color: #000;
-     text-decoration: none;
-}
- nav ul li a:hover, nav ul li a:visited:hover {
-     background: #2581dc;
-     color: #000;
-}
- nav ul li a:not(:only-child):after, nav ul li a:visited:not(:only-child):after {
-     padding-left: 4px;
-     content: " ▾";
-}
- nav ul li ul li {
-     min-width: 190px;
-}
- nav ul li ul li a {
-     padding: 15px;
-     line-height: 20px;
-}
- .nav-dropdown {
-     position: absolute;
-     display: none;
-     z-index: 3;
-     box-shadow: 0 3px 12px #fff;
-     background-color: #fff;
-}
- .nav-mobile {
-     display: none;
-     position: absolute;
-     top: 0;
-     right: 0;
-     background: #ffffff00;
-     height: 70px;
-     width: 70px;
-}
- @media only screen and (max-width: 889px) {
-     .nav-mobile {
-         display: block;
+.navigation {
+    height: 70px;
+    background: #ffffff00;
     }
-     nav {
-         width: 100%;
-         padding: 70px 0 15px;
+    
+    .brand {
+    position: absolute;
+    padding-left: 20px;
+    float: left;
+    line-height: 70px;
+    text-transform: uppercase;
+    font-size: 1.4em;
     }
-     nav ul {
-         display: none;
+    .brand a,
+    .brand a:visited {
+    color: #000000;
+    text-decoration: none;
     }
-     nav ul li {
-         float: none;
-         z-index: 3;
-         background-color: #87ceeb;
+    .brand img{
+    height: 60px;
+    width: 60px;
+    
     }
-     nav ul li a {
-         padding: 15px;
-         line-height: 20px;
+    .nav-container {
+    max-width: 1000px;
+    margin: 0 auto;
     }
-     nav ul li ul li a {
-         padding-left: 30px;
+    
+    nav {
+    float: right;
     }
-     .nav-dropdown {
-         position: static;
+    nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     }
-}
- @media screen and (min-width: 890px) {
-     .nav-list {
-         display: block !important;
+    nav ul li {
+    float: left;
+    position: relative;
     }
-}
- #nav-toggle {
-     position: absolute;
-     left: 18px;
-     top: 22px;
-     cursor: pointer;
-     padding: 10px 35px 16px 0;
-}
- #nav-toggle span, #nav-toggle span:after, #nav-toggle span:before {
-     cursor: pointer;
-     border-radius: 1px;
-     height: 5px;
-     width: 35px;
-     background: #000;
-     position: absolute;
-     display: block;
-     content: "";
-     transition: all 0.3s ease-in-out;
-}
- #nav-toggle span:before {
-     top: -10px;
-}
- #nav-toggle span:after {
-     bottom: -10px;
-}
+    nav ul li a,
+    nav ul li a:visited {
+    display: block;
+    padding: 0 10px;
+    line-height: 70px;
+    background: #ffffff00;
+    color: #000000;
+    text-decoration: none;
+    }
+    nav ul li a:hover,
+    nav ul li a:visited:hover {
+    background: #2581DC;
+    color: #000000;
+    }
+    nav ul li a:not(:only-child):after,
+    nav ul li a:visited:not(:only-child):after {
+    padding-left: 4px;
+    content: " ▾";
+    }
+    nav ul li ul li {
+    min-width: 190px;
+    }
+    nav ul li ul li a {
+    padding: 15px;
+    line-height: 20px;
+    }
+    
+    .nav-dropdown {
+    position: absolute;
+    display: none;
+    z-index: 3;
+    box-shadow: 0 3px 12px rgb(255, 255, 255);
+    background-color: white;
+    }
+    
+    /* Mobile navigation */
+    .nav-mobile {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #ffffff00;
+    height: 70px;
+    width: 70px;
+    }
+    
+    @media only screen and (max-width: 889px) {
+    .nav-mobile {
+        display: block;
+    }
+    
+    nav {
+        width: 100%;
+        padding: 70px 0 15px;
+    }
+    nav ul {
+        display: none;
+    }
+    nav ul li {
+        float: none;
+        z-index: 3;
+        background-color: skyblue;
+    }
+    nav ul li a {
+        padding: 15px;
+        line-height: 20px;
+    }
+    nav ul li ul li a {
+        padding-left: 30px;
+    }
+    
+    .nav-dropdown {
+        position: static;
+    }
+    }
+    @media screen and (min-width: 890px) {
+    .nav-list {
+        display: block !important;
+    }
+    }
+    #nav-toggle {
+    position: absolute;
+    left: 18px;
+    top: 22px;
+    cursor: pointer;
+    padding: 10px 35px 16px 0px;
+    }
+    #nav-toggle span,
+    #nav-toggle span:before,
+    #nav-toggle span:after {
+    cursor: pointer;
+    border-radius: 1px;
+    height: 5px;
+    width: 35px;
+    background: #000000;
+    position: absolute;
+    display: block;
+    content: "";
+    transition: all 300ms ease-in-out;
+    }
+    #nav-toggle span:before {
+    top: -10px;
+    }
+    #nav-toggle span:after {
+    bottom: -10px;
+    }
+    #nav-toggle.active span {
+    background-color: transparent;
+    }
+    #nav-toggle.active span:before, #nav-toggle.active span:after {
+    top: 0;
+    }
+    #nav-toggle.active span:before {
+    transform: rotate(45deg);
+    }
+    #nav-toggle.active span:after {
+    transform: rotate(-45deg);
+    }
+    
  .banner {
      background-color: #5eaaa8;
      color: #e2d1df;
@@ -1613,71 +1423,6 @@ label {
          padding: 3rem 0 1rem 0;
     }
 }
-
-
-.upper-footer{
-  width: 155vh;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (max-width: 1380px){
-  .upper-footer{
-    width: 190vh;
-  }
-}
-
-@media screen and (max-width: 530px){
-  .upper-footer{
-    width: 180vh;
-  }
-}
-
-
-.primary-partners{
-  display: grid;
-  display:flex;
-  grid-gap: 70px;
-  padding-left: 5vh;
-  border-bottom: 1px solid #A3A59F;
-  padding-bottom: 1.5rem;
-}
-
-@media screen and (max-width: 1380px){
-  .primary-partners{
-    padding-left: 20vh;
-  }
-}
-
-@media screen and (max-width: 740px){
-  .primary-partners{
-    padding-left: 7vh;
-  }
-}
-
-@media screen and (max-width: 530px){
-  .primary-partners{
-    padding-left: 4vh;
-  }
-}
-
-
-.secondary-partners{
-  display: grid;
-  display:flex;
-  grid-gap: 70px;
-  border-bottom: 1px solid #A3A59F;
-  padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
-  padding-left: 5vh;
-  margin-bottom: 10vh;
-}
-
-.image-feature-image_about{
-  width: 40vh;
-  height: 16.5vh;
-}
-
  .responsive-calendar {
      position: relative;
      padding-bottom: 75%;
@@ -2193,3 +1938,65 @@ label {
          margin: 0 0 -1px -0.3125rem;
     }
 }
+@media screen and (min-width: 890px) {
+p #id_donation_amount{
+    display: grid;
+    flex-wrap: wrap;
+    margin-left: -1rem;
+    padding: 0;
+    table-layout: fixed;
+    width: calc(100% + 1rem);
+}
+#id_donation_amount label{
+    margin: 10px 1.8% 1.8%;
+    flex: 0 0 30.8%;
+    text-align: center;
+}
+}
+#id_donation_amount input[type="radio"] {
+    display: none;
+  }
+  
+  #id_donation_amount span {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    text-transform: uppercase;
+    border: 2px solid #ffa833;
+    border-radius: 3px;
+    color: #ffa833;
+  }
+
+  #id_donation_amount input[type="radio"]:checked + span {
+    background-color: #ffa833;
+    color: white;
+  }
+  label.radio-inline{
+    display: inline;
+    size: 20px;
+  }
+
+.partners {
+    text-align: center;
+    padding: 25px 3%;
+}
+
+.partners a{float:left;width:50%;text-align:center;padding:0;margin:45px 0;position:relative;transform:scale(0.7,0.7);-moz-transform:scale(0.7,0.7);-webkit-transform:scale(0.7,0.7)}.partners a>img{position:absolute;top:0;left:0;bottom:0;right:0;margin:auto}
+
+.partners>.Primary{float:left;width:100%;border-bottom:1px solid #ccc;padding:20px 0;}
+
+@media screen and (min-width:1000px){.partners>.Primary{padding:30px 20%}}
+
+@media screen and (min-width:500px){.partners>.Primary a{width:25%}}
+
+@media screen and (min-width:700px){.partners>.Primary a{transform:scale(0.85,0.85);-moz-transform:scale(0.85,0.85);-webkit-transform:scale(0.85,0.85)}}
+
+.partners>.Secondary{float:left;width:100%;border-bottom:1px solid #ccc;margin-bottom:30px;padding:20px 0}
+
+@media screen and (min-width:1000px){.partners>.Secondary{padding:30px 5%}}
+
+@media screen and (min-width:500px){.partners>.Secondary a{width:33.3%}}
+
+@media screen and (min-width:700px){.partners>.Secondary a{width:25%;transform:scale(0.85,0.85);-moz-transform:scale(0.85,0.85);-webkit-transform:scale(0.85,0.85)}}
+
+@media screen and (min-width:1000px){.partners>.Secondary a{width:16.66%}}
