--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1059,6 +1059,7 @@
     }
     nav ul li a:hover,
     nav ul li a:visited:hover {
+    cursor: pointer;
     background: #e4e4e4;
     color: #000000;
     }
