--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1013,7 +1013,7 @@
     background: white;
     }
     
-    .brand {
+    .logo {
     position: absolute;
     padding-left: 20px;
     float: left;
@@ -1021,12 +1021,12 @@
     text-transform: uppercase;
     font-size: 1.4em;
     }
-    .brand a,
-    .brand a:visited {
+    .logo a,
+    .logo a:visited {
     color: #000000;
     text-decoration: none;
     }
-    .brand img{
+    .logo img{
     height: 60px;
     width: 60px;
     
