--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2010,3 +2010,6 @@ p #id_donation_amount{
 @media screen and (min-width:700px){.partners>.Secondary a{width:25%;transform:scale(0.85,0.85);-moz-transform:scale(0.85,0.85);-webkit-transform:scale(0.85,0.85)}}
 
 @media screen and (min-width:1000px){.partners>.Secondary a{width:16.66%}}
+
+/* TODO: Form */
+
